added basic css to look nicer

--- a/NumberCounter/index.html
+++ b/NumberCounter/index.html
@@ -8,9 +8,17 @@
 </head>
 <body>
     <main>
-        <button id="plusBtn">+</button>
-        <h4 id="number">0</h4> <button id="reset"> Reset </button>
-        <button id="minusBtn">-</button>
+        <div>
+            <h4 id="number">0</h4> 
+        </div>
+        <div id="counter">
+            <button id="minusBtn">-</button>
+            
+            <button id="plusBtn">+</button>
+            <br>
+            <button id="reset"> Reset </button>
+        </div>
+            
     </main>
     <script src="./numberCounter.js"></script>
 </body>
