maintext and center content

--- a/SplitScreen/SplitScreen.html
+++ b/SplitScreen/SplitScreen.html
@@ -12,13 +12,17 @@
 
         <div class="col-md-6 no-gutters">
             <div class="leftSide">
-
+                <div class="mainText">
+                    <h1>leftSide</h1>
+                </div>
             </div>
         </div>
 
         <div class="col-md-6 no-gutters">
             <div class="rightSide">
-
+                <div class="mainText">
+                    <h1>rightSide</h1>
+                </div>
             </div>
         </div>
 
